# boondle

./: .gitignore  Cargo.toml  README.md  setting.json
boondle/: package.sh  project.json
src/: app.rs  main.rs  project.rs  setting.rs  terminal.rs
src/exporter/: app_image.rs  debian.rs  export.rs  mod.rs  script.rs
